<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".MainActivity">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="210dp"
            android:layout_height="210dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/edUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_edit_background"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:hint="Nazwa użytkownika"
            android:minHeight="48dp"
            android:padding="10dp" />

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_edit_background"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:hint="Hasło"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="10dp"
            android:text="Nie pamiętam hasła"/>


        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_background"
            android:minWidth="200dp"
            android:minHeight="48dp"
            android:text="Zaloguj"
            android:textAllCaps="false"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Zarejestruj się"
            android:textSize="21sp" />

    </LinearLayout>

</RelativeLayout>
</ScrollView>